<resources>
    <string name="app_name">AVCInteractiveMapApp</string>

    <!--Emergency Contact Activity Related-->
    <string name="sherrifs_office_description">Monday through Friday: 7:30 am to Midnight. After midnight, the office is closed but officers are on patrol throughout the campus. You can contact them after midnight and up until 7:30 am the following morning from any payphone at *80 or from your cell phone at 661.722.6399.\n
        \nSaturday and Sunday: The office is closed on Saturday and Sunday but officers are on patrol throughout the campus. You can contact them from any payphone at *80, or from your cell phone at 661.722.6399.\n
        \nLocation: The Antelope Valley College safety and security department is located in the Student Services Center on the south side of the building in room T800.
    </string>
    <string name="campus_safety_escort_description">The Antelope College safety and security department has enacted a campus escort program on a 24hour basis. In the event a student, employee or visitor wishes an escort to their car, office, classroom or any other location on campus, simply dial 6399 and request the escort. From any payphone, dialing *80. From any cell phone, dial 661.722.6399.\n
        \nAn officer will be dispatched to the requesting party to their destination. If the request is to your vehicle, our officer will stand by until you safely exit the parking lot.\n
        \nCalling from Home: In the event you are calling from home and wish an escort from your vehicle to a location on campus, simply contact us at 661.722.6399 and advise us of the following:\n
        \nLocation you will be arriving in
        \nType of vehicle
        \nLocation in which you wish to be escorted to\n
        \nThat\'s all it takes. An officer will meet you at the location requested and escort you to your destination.
    </string>
    <string name="criminal_prevention_detection_description">The Antelope valley College safety and security department is a pro-active department. Our officers are constantly on alert to guard against criminal activity. High visibility and 24 hour patrols ensure all who come onto our campus have a great learning environment.</string>

    <!--About Us Activity-->

    <!--About Us -->
    <string name="about_us_description">Our interactive campus map provides a virtual tour of our campus and its facilities. This user-friendly tool is designed to help students, faculty, and visitors navigate and explore our campus. With features like building information, points of interest, and more, this map is your go-to resource for all things related to our campus.</string>
    <string name="about_us_title">About Us</string>

    <string name="about_us_phone">phone</string>
    <string name="about_us_email">email</string>

    <!--Contributors -->
    <string name="contributors_title">Contributors</string>

    <string name="contributor_projectmanager_name">Project Manager: Peter Kallos</string>
    <string name="contributor_projectmanager_email">pkallos19@gmail.com</string>
    <string name="contributor_chair_name">Chair: Tyler Carter-Mills</string>
    <string name="contributor_chair_email">tcartermills@avc.edu</string>
    <string name="contributor_cochair_name">Co-chair: Nasif Hossain</string>
    <string name="contributor_cochair_email">nhossain@avc.edu</string>

    <string name="contributor_ryan_name">Ryan Reeves</string>
    <string name="contributor_ryan_email">rreeves5@avc.edu</string>

    <string name="contributor_conan_name">Conan Nguyen</string>
    <string name="contributor_conan_email">cnguyen17@avc.edu</string>

    <string name="contributor_cristian_name">Cristian Herrera</string>
    <string name="contributor_cristian_email">cherrera@avc.edu</string>

    <string name="contributor_harvey_name">Harvey Freeman</string>
    <string name="contributor_harvey_email">hfreeman@avc.edu</string>

    <string name="contributor_sebastian_name">Sebastian Ala Torre</string>
    <string name="contributor_sebastian_email">salatorre1@avc.edu</string>

    <string name="contributor_nick_name">Nick</string>
    <string name="contributor_nick_email">https://github.com/nickg309</string>

    <string name="contributor_logan_name">Logan Sanchez</string>
    <string name="contributor_logan_email">lsanchez53@avc.edu</string>

    <string name="contributor_samuel_name">Samuel Segovia</string>
    <string name="contributor_samuel_email">ssegovia2@avc.edu</string>

    <string name="contributor_bao_name">Bao</string>
    <string name="contributor_bao_email">https://github.com/baodao2002</string>

    <string name="contributor_shane_name">Shane Powell</string>
    <string name="contributor_shane_email">spowell31@avc.edu</string>

    <string name="center_gps_button">Center map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="picture">Picture</string>
    <string name="info">Info</string>
    <string name="administration_building">Administration Building</string>
    <string name="Admissions_and_Records_Office" />
    <string name="avcImap">AVC Interactive Map</string>

    <string name="uhazy_hall_picture">Uhazy Hall Picture</string>
    <string name="uh_general"><b>General:</b>\n\tDr. Uhazy has been at the college more than 29 years.\nBefore becoming a dean in 1998, he taught\nmicrobiology.</string>
    <string name="uh_resources"><b>Resources:</b>\nCOMPUTER LAB\nUH 272: Lab contains a WEPA printer.\n\nWinter Break and Summer Session\nMon. - Thurs: 7:30am - 4:30pm\nFri: 7:30am - 11:30am\n\nFall and Spring Semesters\nMon - Thurs: 8am - 8:00pm\nFri: 8am - 2:30pm\n\nRestaurants:\nSUBWAY\n</string>

    <string name="ssv_picture">SSV Picture</string>
    <string name="ssv_general"><b>General:</b>\n</string>
    <string name="ssv_resources"><b>Resources:</b>\n</string>

    <string name="college">College</string>
    <string name="avc_general"><b>General:</b>\n</string>
    <string name="avc_resources"><b>Resources:</b>\n</string>

    <string name="admin_general"><b>General:</b>\n</string>
    <string name="admin_resources"><b>Resources:</b>\n</string>

    <string name="admissions_general"><b>General:</b>\n</string>
    <string name="admissions_resources"><b>Resources:</b>\n</string>

    <string name="me_image">Math and Engineering</string>
    <string name="me_general"><b>General:</b>\n</string>
    <string name="me_resources"><b>Resources:</b>\n</string>

    <string name="yh_general"><b>General:</b>\n</string>
    <string name="yh_resources"><b>Resources:</b>\n</string>

    <string name="lh_general"><b>General:</b>\n</string>
    <string name="lh_resources"><b>Resources:</b>\n</string>

    <string name="mh_general"><b>General:</b>\n</string>
    <string name="mh_resources"><b>Resources:</b>\n</string>

    <string name="pat_image">Performing Art Theatre</string>
    <string name="pat_general"><b>General:</b>\n</string>
    <string name="pat_resources"><b>Resources:</b>\n</string>

    <string name="osd_general"><b>General:</b>\n</string>
    <string name="osd_resources"><b>Resources:</b>\n</string>

    <string name="tet_general"><b>General:</b>\n</string>
    <string name="tet_resources"><b>Resources:</b>\n</string>

    <string name="teal_general"><b>General:</b>\n</string>
    <string name="teal_resources"><b>Resources:</b>\n</string>

    <string name="subway_general"><b>General:</b>\n</string>
    <string name="subway_resources"><b>Resources:</b>\n</string>

    <string name="stadium_general"><b>General:</b>\n</string>
    <string name="stadium_resources"><b>Resources:</b>\n</string>

    <string name="soar_general"><b>General:</b>\n</string>
    <string name="soar_resources"><b>Resources:</b>\n</string>

    <string name="lib_general"><b>General:</b>\n</string>
    <string name="lib_resources"><b>Resources:</b>\n</string>

    <string name="lc_general"><b>General:</b>\n</string>
    <string name="lc_resources"><b>Resources:</b>\n</string>

    <string name="gym_general"><b>General:</b>\n</string>
    <string name="gym_resources"><b>Resources:</b>\n</string>

    <string name="gh_general"><b>General:</b>\n</string>
    <string name="gh_resources"><b>Resources:</b>\n</string>

    <string name="gallery_general"><b>General:</b>\n</string>
    <string name="gallery_resources"><b>Resources:</b>\n</string>

    <string name="famo_general"><b>General:</b>\n</string>
    <string name="famo_resources"><b>Resources:</b>\n</string>

    <string name="fa_general"><b>General:</b>\n</string>
    <string name="fa_resources"><b>Resources:</b>\n</string>

    <string name="bookstore_general"><b>General:</b>\n</string>
    <string name="bookstore_resources"><b>Resources:</b>\n</string>

</resources>
