<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutUsPage">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:padding="8dp"
                android:text="@string/about_us_description"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/contributors_title"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:text="@string/contributors_title"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="250dp">
                <ImageView
                    android:id="@+id/conan_picture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    app:srcCompat="@drawable/conan_picture"/>

                <TextView
                    android:id="@+id/conan_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="Name: Conan Nguyen"
                    android:layout_below="@+id/conan_picture"
                    android:paddingTop="10dp"
                    android:paddingLeft="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="cnguyen17@avc.edu"
                    android:layout_below="@+id/conan_name"
                    android:paddingLeft="30dp"/>

            </RelativeLayout>
            

            <TextView
                android:id="@+id/contributors_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"

                android:text="@string/contributors_names"
                android:textSize="16sp"
                android:textStyle="normal"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

